# wtp-GUI

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
examples/: simple.cmp  simple_theis.cmp
src/wtp_gui/: __init__.py  __main__.py  core.py
